--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
         <header role="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-4 text-left"><img src="./images/logo.png" class="logo" alt=""></div>
-                    <div class="col-4 text-center"><p>Checkout</p></div>
-                    <div class="col-4 text-right"><img src="./images/secure-icon.png" class="secure-icon" alt="secure-icon"></div>
+                    <div class="col-4 text-left">
+                        <img src="./images/logo.png" class="logo" alt="">
+                    </div>
+                    <div class="col-4 text-center">
+                        <p>Checkout</p>
+                    </div>
+                    <div class="col-4 text-right">
+                        <img src="./images/secure-icon.png" class="secure-icon" alt="secure-icon">
+                    </div>
                 </div>
             </div>
         </header>
