--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                             <input
                                 placeholder="Name on card"
                                 id="cardHolderName"
+                                pattern="[A-Za-z]{2,}"
                                 class="form-control"
                                 type="text"
-                                required/>
+                                required />
                         </div>
                     </div>
 
@@ -86,6 +87,7 @@
                                 id="month"
                                 type="tel"
                                 class="form-control"
+                                pattern="[0-9]{2}"
                                 minlength="2"
                                 maxlength="2"
                                 placeholder="MM"
@@ -96,6 +98,7 @@
                                 id="year"
                                 class="form-control"
                                 type="tel"
+                                pattern="[0-9]{2}"
                                 minlength="2"
                                 maxlength="2"
                                 placeholder="YY"
@@ -106,6 +109,7 @@
                                 id="cvv"
                                 class="form-control"
                                 type="tel"
+                                pattern="[0-9]{3,4}"
                                 maxlength="4"
                                 placeholder="CVC"
                                 required/>
@@ -137,7 +141,7 @@
         <div class="cards-accepted">
             <div class="row">
                 <div class="col">
-                    <p>© SURVIVAL APEX B.V 2018</p>
+                    <p>&copy; SURVIVAL APEX B.V 2018</p>
                 </div>
                 <div class="col">
                     <img src="./images/cards.png" alt="">
