--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </header>
         <div class="container main-section">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md-6 section-left">
                     <div class="row">
                         <div class="col">
